--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,16 +1,15 @@
 interface=wlan0
-driver=n180211
+driver=nl80211
 ssid=pi4ap
 hw_mode=g
 channel=6
 wmm_enabled=1 # QoS support
 ieee80211n=1 # 802.11n support
-macaddr_acl=1
+macaddr_acl=0
 auth_algs=1
-ignore_broadcase_ssid=0
+ignore_broadcast_ssid=0
 wpa=2
 wpa_passphrase=stronkPasswd
 wpa_key_mgmt=WPA-PSK
-#wpa_pairwise=TKIP CCMP # WPA is for cowards
 rsn_pairwise=CCMP
 ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
