--- a/hostapd.conf
+++ b/hostapd.conf
@@ -5,6 +5,7 @@ hw_mode=g
 channel=6
 wmm_enabled=1 # QoS support
 ieee80211n=1 # 802.11n support
+eap_server=0
 macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
